--- a/src/index.html
+++ b/src/index.html
@@ -6,24 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/sass/main.sass">
-    <link  rel="icon"   href="./assets/img/logo.svg" type="image/png" />
+    <link rel="icon" href="./assets/img/logo.svg" type="image/png" />
     <title>Fruity Escape</title>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
-    <div class="contenedor">
-        <video class="contenedor__video" controls autoplay loop muted>
-            <source src="assets/video/video.mp4" type="video/mp4">
-            <source src="assets/video/video.webm" type="video/webm">
-            Tu navegador no soporta los formatos de vídeo
-        </video>
-        <div class="contenedor__opacidad"></div>
-    </div>
     <header class="encabezado">
         <nav class="encabezado__nav">
             <ul class="encabezado__nav__listado">
                 <li class="encabezado__nav__listado__item"><a href="#inicio"
-                        class="encabezado__nav__listado__item__enlace">INICIO</a></li>
+                        class="encabezado__nav__listado__item__enlace encabezado__nav__listado__item__enlace--activo">INICIO</a>
+                </li>
                 <li class="encabezado__nav__listado__item"><a href="#personajes"
                         class="encabezado__nav__listado__item__enlace">PERSONAJES</a></li>
                 <li class="encabezado__nav__listado__item"><a href="#mapas"
@@ -31,33 +26,98 @@
             </ul>
         </nav>
     </header>
-    <main class="principal">
-        <section id="inicio" class="principal__seccion principal__seccion--inicio">
-            <h2 class="principal__seccion__titulo">FRUITY ESCAPE</h2>
-            <p class="principal__seccion__resumen">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde quas ratione eligendi, animi possimus minus
-                dignissimos dicta illum a? Vel soluta accusamus tempora, totam eos a asperiores dignissimos eius
-                quisquam qui molestias distinctio odio laudantium consectetur reiciendis optio maxime temporibus dolores
-                facere corporis ipsum quis. Impedit sint quaerat placeat laborum nihil aliquam molestiae inventore,
-                quisquam optio eos?</p>
+    <main class="principal" id="mi-main">
+        <section id="inicio" class="principal__seccion">
+            <div class="principal__seccion__contenido principal__seccion__contenido--inicio">
+                <h1 class="principal__seccion__contenido__titulo">FRUITY<br>ESCAPE</h1>
+                <img class="principal__seccion__contenido__logo" alt="logo de la web" src="./assets/img/logo.svg" />
+                <p class="principal__seccion__contenido__resumen">
+                    Juega una aventura de plataformeo donde tendrás que escapar de la cocina con los dos protagonistas.
+                </p>
+            </div>
+            <div class="principal__seccion__contenedor">
+                <video class="principal__seccion__contenedor__video" autoplay loop muted>
+                    <source src="assets/video/video.mp4" type="video/mp4">
+                    <source src="assets/video/video.webm" type="video/webm">
+                    Tu navegador no soporta los formatos de vídeo
+                </video>
+                <div class="principal__seccion__contenedor__opacidad"></div>
+            </div>
         </section>
         <section id="personajes" class="principal__seccion">
-            <h2 class="principal__seccion__titulo">PERSONAJES</h2>
+            <div class="principal__seccion__contenido">
+                <h2 class="principal__seccion__contenido__subtitulo">PERSONAJES</h2>
+                <ul class="principal__seccion__contenido__lista">
+                    <li
+                        class="principal__seccion__contenido__lista__elemento principal__seccion__contenido__lista__elemento--seleccionado">
+                        Personaje 1</li>
+                    <li class="principal__seccion__contenido__lista__elemento">Personaje 2</li>
+                </ul>
+                <div class="principal__seccion__contenido__contenedor">
+                    <article
+                        class="principal__seccion__contenido__contenedor__articulo principal__seccion__contenido__contenedor__articulo--activo">
+                        <img class="principal__seccion__contenido__contenedor__articulo__personaje"
+                            src="assets/img/manzana.svg" alt="personaje manzana" />
+                        <h3 class="principal__seccion__contenido__contenedor__articulo__titulo">Manzana</h3>
+                        <p class="principal__seccion__contenido__contenedor__articulo__texto">Uno de los dos personajes
+                            principales de Fruity Escape. Fue consciente del peligro que corrian en el entorno en el que
+                            residian cuando pierdo parte de su cuerpo.</p>
+                        <audio id="audio1" preload="auto">
+                            <source src="assets/audio/falling.mp3" type="audio/mp3">
+                            <source src="assets/audio/falling.flac" type="audio/flac">
+                            Tu navegador no soporta los formatos de audio usado en la web
+                        </audio>
+                    </article>
+                    <article class="principal__seccion__contenido__contenedor__articulo">
+                        <img class="principal__seccion__contenido__contenedor__articulo__personaje"
+                            src="assets/img/pera.svg" alt="personaje manzana" />
+                        <h3 class="principal__seccion__contenido__contenedor__articulo__titulo">Pera</h3>
+                        <p class="principal__seccion__contenido__contenedor__articulo__texto">Uno de los dos personajes
+                            principales de Fruity Escape. Tras ver lo que sucedió con su compañero llego a la conclusión
+                            de que no era buena idea seguir residiendo en dicho entorno.</p>
+                        <audio id="audio2" preload="auto">
+                            <source src="assets/audio/heyhey.mp3" type="audio/mp3">
+                            <source src="assets/audio/heyhey.flac" type="audio/flac">
+                            Tu navegador no soporta los formatos de audio usado en la web
+                        </audio>
+                    </article>
+                </div>
+            </div>
+            <div class="principal__seccion__contenedor">
+                <img class="principal__seccion__contenedor__img" alt="" src="./assets/img/background1.jpg" />
+                <div class="principal__seccion__contenedor__opacidad"></div>
+            </div>
         </section>
         <section id="mapas" class="principal__seccion">
-            <h2 class="principal__seccion__titulo">MAPAS</h2>
+            <div class="principal__seccion__contenido">
+                <h2 class="principal__seccion__contenido__subtitulo">MAPAS</h2>
+                <div class="principal__seccion__contenido__carrusel">
+                    <img class="principal__seccion__contenido__carrusel__img" src="assets/img/mapa_miguel.jpg"
+                        alt="Mapa principal">
+                    <img class="principal__seccion__contenido__carrusel__img" src="assets/img/mapa_dani.jpg"
+                        alt="Mapa secundario">
+                    <img class="principal__seccion__contenido__carrusel__img" src="assets/img/mapa_sergio.jpg"
+                        alt="Mapa terciario">
+                </div>
+                <div class="principal__seccion__contenido__control">
+                    <input type="radio" name="mapas" class="principal__seccion__contenido__control__radio" checked>
+                    <input type="radio" name="mapas" class="principal__seccion__contenido__control__radio">
+                    <input type="radio" name="mapas" class="principal__seccion__contenido__control__radio">
+                </div>
+            </div>
+            <div class="principal__seccion__contenedor">
+                <img class="principal__seccion__contenedor__img" alt="" src="./assets/img/background2.jpg" />
+                <div class="principal__seccion__contenedor__opacidad"></div>
+            </div>
         </section>
     </main>
 
     <footer class="pie">
-        <nav class="pie__nav">
-            <ul class="pie__nav__listado">
-                <li class="pie__nav__listado__item"><a class="pie__nav__listado__item__enlace">EJEMPLO</a></li>
-                <li class="pie__nav__listado__item"><a class="pie__nav__listado__item__enlace">EJEMPLO 2</a></li>
-                <li class="pie__nav__listado__item"><a class="pie__nav__listado__item__enlace">EJEMPLO 3</a>
-                </li>
-            </ul>
-        </nav>
+        <p class="pie__text">©2023 Fruity Escape. All rights reserved. All trademarks are the property of their
+            respective owners.</p>
     </footer>
+
+    <script src="assets/script/app.js"></script>
 </body>
 
 </html>
